compiler/testData/diagnostics/tests/resolve/resolveTypeArgsForUnresolvedCall.fir.kt
// RUN_PIPELINE_TILL: SOURCE
fun foo() {
    <!UNRESOLVED_REFERENCE!>x<!>.yyy<<!UNRESOLVED_REFERENCE!>XXX<!>>()
    <!UNRESOLVED_REFERENCE!>x<!>.yyy<Int>()
}
